ordered filters, filter match order buttons, better ergonomics

--- a/libs/client/static/css/_mixins.sass
+++ b/libs/client/static/css/_mixins.sass
@@ -145,6 +145,13 @@
         @include menu_active_tab
     .tab_inactive
         @include menu_inactive_tab
+    .tab_sep
+        @include hblock
+
+        border-radius: 5px
+        padding: 14px 16px
+        text-decoration: none
+        width: 5px
 
 /// Complete menu style with tabs.
 @mixin menu_style
