--- a/libs/client/static/css/body.sass
+++ b/libs/client/static/css/body.sass
@@ -43,6 +43,9 @@ body
             .chart_style
                 @include chart_style
 
+                .chart_canvas_style
+                    @include chart_canvas_style
+
             .hidden_chart_style
                 @include chart_style
                 @include hidden
