--- a/libs/client/static/css/_mixins.sass
+++ b/libs/client/static/css/_mixins.sass
@@ -86,6 +86,10 @@
     width: $layout_chart_width
     height: $layout_chart_height
 
+@mixin chart_canvas_style
+    width: 100%
+    height: 100%
+
 /// Tab mixins (for menus).
 
 /// Horizontal blocks (`<ul>`), mostly for tabs.
