[WIP] major rework of the CSS and layout aspects of the client

--- a/libs/client/static/css/_mixins.sass
+++ b/libs/client/static/css/_mixins.sass
@@ -189,3 +189,14 @@
     .li_center
         @include menu_tabs
         float: center
+
+@mixin chart_filter_buttons
+
+    .chart_filter_button_active
+        @include font_black_shadow
+        @include menu_tab
+        opacity: 1.0
+    .chart_filter_button_inactive
+        @include font_black_shadow
+        @include menu_tab
+        opacity: 0.5
