--- a/libs/client/static/css/footer.sass
+++ b/libs/client/static/css/footer.sass
@@ -12,7 +12,7 @@ footer
     background-color: $menu_bg
     width: 100%
     bottom: 0
-    box-shadow: 0px 0px 10px 10px $menu_bg
+    // box-shadow: 0px 0px 10px 10px $menu_bg
 
     .footer_tabs
         height: $layout_tab_height
