--- a/libs/client/static/css/style.css
+++ b/libs/client/static/css/style.css
@@ -1,6 +1,6 @@
 body {
   font: 16px SF Pro Display, SF Pro Icons, Helvetica Neue, Helvetica, Arial, sans-serif;
-  background-color: black;
+  background-color: white;
 }
 body code {
   color: #d77500;
@@ -118,6 +118,40 @@ body .body_header_footer .memthol_chart_container .active_tick_button {
 body .body_header_footer .memthol_chart_container .active_tick_button:hover {
   cursor: pointer;
 }
+body .body_header_footer .memthol_chart_container .chart_filter_button_active {
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  display: block;
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+  float: center;
+  text-align: center;
+  border-radius: 5px;
+  padding: 14px 16px;
+  text-decoration: none;
+  opacity: 1;
+}
+body .body_header_footer .memthol_chart_container .chart_filter_button_active:hover, body .body_header_footer .memthol_chart_container .chart_filter_button_active:active {
+  text-decoration: underline;
+  cursor: pointer;
+}
+body .body_header_footer .memthol_chart_container .chart_filter_button_inactive {
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  display: block;
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+  float: center;
+  text-align: center;
+  border-radius: 5px;
+  padding: 14px 16px;
+  text-decoration: none;
+  opacity: 0.5;
+}
+body .body_header_footer .memthol_chart_container .chart_filter_button_inactive:hover, body .body_header_footer .memthol_chart_container .chart_filter_button_inactive:active {
+  text-decoration: underline;
+  cursor: pointer;
+}
 body .body_header_footer .memthol_chart_container .chart_header {
   margin: 0 10%;
   height: 2vh;
@@ -175,7 +209,6 @@ footer {
   background-color: black;
   width: 100%;
   bottom: 0;
-  box-shadow: 0px 0px 10px 10px black;
 }
 footer code {
   color: #ff8b00;
